fixed images spilling out of container for different media

--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,8 @@ section .title::after {
   cursor: pointer;
   transition: all 0.3s ease;
   margin: 5px;
-  height: 400px;
+  height: auto;
+  overflow: auto;
 }
 .services .serv-content .card:hover {
   background: crimson;
@@ -298,7 +299,7 @@ section .title::after {
 }
 .services .serv-content .card img {
   padding: 0;
-  height: 100%;
+  height: auto;
   width: 100%;
   color: crimson;
   transition: color 0.3s ease;
